--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -86,6 +89,39 @@ body {
     display: inline-block;
   }
   
+  
+  .animation {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+    letter-spacing: 1px;
+    color: #fff;
+    display: inline-block;
+    animation: fadeIn 1.5s forwards;
+    opacity: 0;
+    transition-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  }
+  
+  .first {
+    display: inline-block;
+    animation: firstSpan 1.5s forwards cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    z-index: 1;
+    position: relative;
+  }
+  
+  .oh {
+    display: inline-flex;
+    overflow: hidden;
+    margin-left: 20px;
+  }
+  
+  .second {
+    animation: secondSpan 1.5s forwards cubic-bezier(0.785, 0.135, 0.15, 0.86);
+    font-weight: 100;
+    z-index: -1;
+    display: inline-block;
+  }
+  
   @keyframes fadeIn {
     0% {
       opacity: 0;
@@ -125,3 +161,21 @@ body {
     }
   }
   
+  
+
+  .sidenav-div{
+    width: 250px;
+    height: 100vh;
+    background: #3498ff;
+  }
+
+  .sideNav{
+    height: 100%;
+    margin-top: 200px;
+  }
+
+  .content-div{
+    width: 100%;
+    height: 100%;
+    background: rgb(243, 243, 243);
+  }
