--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,14 +29,14 @@
 .login-div{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
-    text-shadow: 2px 2px #000000;
+    text-shadow: 2px 2px #2c2c2c;
 }
 
 body {
@@ -178,4 +178,15 @@ body {
     width: 100%;
     height: 100%;
     background: rgb(243, 243, 243);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card-div{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    width: 80%;
+    height: 80%;
+    background: white;
+    border-radius: 10px;
   }
