--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -164,7 +164,7 @@ body {
   
 
   .sidenav-div{
-    width: 250px;
+    width: 230px;
     height: 100vh;
     background: #3498ff;
   }
@@ -175,7 +175,7 @@ body {
   }
 
   .content-div{
-    width: 100%;
+    flex: 1;
     height: 100%;
     background: rgb(243, 243, 243);
     display: flex;
@@ -191,4 +191,15 @@ body {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+  }
+
+  .logo-div{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 230px;
+    height: 200px;
+    background-image: url("./meditrak2.png");
+    background-size: cover;
+    background-position: center center;
   }
